fix(footer) center align logos on mobile

--- a/site/web/app/themes/smart-city/resources/assets/styles/layouts/_footer.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/layouts/_footer.scss
@@ -140,5 +140,18 @@ footer.content-info .author .contribute {
 @include media-breakpoint-down(sm) {
   footer.content-info .logos .author.pull-right {
     float: none !important;
+    text-align: center;
+  }
+
+  footer.content-info .logos {
+    text-align: center;
+  }
+
+  footer.content-info .logos .alba-iulia-logo {
+    text-align: center;
+  }
+
+  footer.content-info .logos .alba-iulia-logo .text {
+    text-align: center;
   }
 }
